usefuldb gem CHANGELOG

## Version 0.0.8
- Fixed issue introduced in 0.0.7 with deleting elements 

## Version 0.0.7
- Updated layout of the yaml database file to include description field for each entry
- Updated layout of the yaml database file to include a version field
- Updated system to allow automatic upgrading of older databases to the new structure

## Version 0.0.6
- Added UsefulDB::UsefulUtils.array_to_s to convert an array into a string identical to Ruby 1.9.1 +'s Array#to_s
- Removed colour output so as to display correctly on Windows hosts through JRuby
- Slightly altered output from the listing functions

## Version 0.0.5
- Fixed bordercase issue when deleting entries from the database
- Updated README
- Added UsefulDB::Version

## Version 0.0.4
- Altered the UsefulDB::GUI.list function's output to mimic Array#to_s as it was not operating correctly on the Mac platform I tested the gem on
- Altered the UsefulDB::UsefulUtils.search function's output to mimic Array#to_s as it was not operating correctly on the Mac platform I tested the gem on

## Version 0.0.3
- Attempt to fix bug with traversing the database array

## Version 0.0.2
- Fixed bug with database not being copied to the users home directory correctly

## Version 0.0.1
- Added test for adding entries to the database
- Added test for removing entries from the database
- Added test for loading and saving the database
- Added executable script usefuldb, and the barebones parameter parsing system therein
- Refactored the tests to allow for easier reading of the code
- Updated the README to include information about dependencies and installation instructions
- Wrapped all current codebase in a single Ruby module: UsefulDB
- Added search functionality to the system
- Added the functionality to add elements to the database
- Added the functionality to list all elements in the database
- Added functionality to delete an element from the database