@@ -1,4 +1,4 @@
-## Readme - v0.0.8
+## Readme - v0.0.6
 
 ### Install
 To run the unit tests use the following rake target
