@@ -2,6 +2,7 @@ usefuldb gem CHANGELOG
 
 ## Version 0.0.8
 - Fixed issue introduced in 0.0.7 with deleting elements 
+- Added logging to many parts of the UsefulDB system to aid debugging, and provide support for verbose mode 
 
 ## Version 0.0.7
 - Updated layout of the yaml database file to include description field for each entry
